assets/scripts/style.css
/* ... */
#loadingFace {
    /* position: absolute;
    right: 20%;
    top: 50%;
    bottom: 10%;
    width: auto;
    height: 45vh;
    text-align: center;
    font-size: 96px;
    line-height: 8px; */ /*leaving this in case I need it again later */
    height:150px;
    width: 150px;
    margin:0 auto;
    position:absolute;
    left:50%;
    top:50vh;
    margin-left:-75px;
    margin-top:-75px;
    display: block;
}

.rotating {
    -webkit-animation: rotating 4s linear infinite;
    -moz-animation: rotating 4s linear infinite;
    -ms-animation: rotating 4s linear infinite;
    -o-animation: rotating 4s linear infinite;
    animation: rotating 4s linear infinite;
}


#clickThru {
    position: absolute;
    bottom: 24px;
    font-size: 24px;
    text-align: center;
    color: white;
    text-shadow: black 3px 3px;
    width: 100%;
    font-family: 'Sigmar One', cursive;
}

.explanationLoad {
    position: absolute;
    bottom: 48px;
    font-size: 24px;
    text-align: center;
    color: white;
    text-shadow: black 3px 3px;
    width: 100%;
    font-family: 'Sigmar One', cursive;
}

.gamePlay {
    display: none;
    visibility: visible;
}

.solution {
    display: none;
    visibility: visible;
}

.gameScore {
    width: 100%;
    height: 100vh;
    text-align: center;
    display: table;
    position: relative; 
    display: none;
    visibility: visible;
}

.gameFinalScore {
    width: 100%;
    height: 100vh;
    text-align: center;
    color: white;
    display: table;
    position: absolute;
    display: none;
    visibility: visible;
    background:  #b44811;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background: radial-gradient(circle at center, #03152b 0%,#010914 17%,#c45714 17%,#670003 27%,#c54c13 27%,#60070d 39%,#b0410c 39%,#490407 54%,#8d4009 54%,#3c040d 74%,#6e2a07 74%,#2b0208 94%,#481a02 94%,#481a02 94%,#2f010b 100%);
}

.finalScore {
    margin: 0 auto;
    margin-top: 25vh;
    width: 100%;
    font-size: 24pt;
    font-family: 'Suez One', serif;
    text-align: center; 
    text-shadow: black 3px 3px;
}

.playAgainButton {
    margin: 0 auto;
    position: absolute;
    width: 100%;
    bottom: 25vh;
    height: 5vh;
    font-size: 5vh;
    font-family: 'Sigmar One', cursive;
    text-align: center;
    color: white;
    text-shadow: black 3px 3px;
}

audio {
    display:none;
}

.ourQuizTitle {
    margin-top: 20vh;
    width: 70%;
    height: auto;
    margin: 0 auto;
}

.answerTextButton {
    background: rgba(0, 0, 0, 0.75);
    color: white;
    border-width: 2px;
    border-color: white;
    border-style: solid;
    border-radius: 15px;
    padding: 10px;
    margin: 0 auto;
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 20%;
    margin-right: 20%;
    float: left;
    min-width: 60%;
    max-width: 60%;
    font-size: 24pt;
    text-align: center;
    font-family: 'Sigmar One', cursive;
}

.answerTextButton:hover {
    background: white;
    color: black;
}

.gamePlay {
    width: 100%;
    height: 100vh;
    text-align: center;
    display: table;
    padding-top: 10px;
}

.topGamebar {
    margin-top:10px;
}

.questionText {
    background: rgba(0, 0, 0, 0.75);
    color: white;
    border-style: solid;
    border-width: 2px;
    border-color: white;
    font-size: 24pt;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 10px;
    margin-left: 10%;
    margin-right: 10%;
    border-radius: 15px;
    min-height: 120px;
    text-align: center;
    font-family: 'Lilita One', cursive;
}

.gameSolution {
    color: white;
    font-size: 24pt;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 10px;
    margin-left: 10%;
    margin-right: 10%;
    border-radius: 5px;
    min-width: 80%;
    min-height: 40%;
    max-height: 60%;
    overflow: visible;
    text-align: center;
    font-family: 'Lilita One', cursive;
}

#answerImage {
    width: 80%;
    margin: 0 auto;
    /* margin-left: 10%;
    margin-right: 10%; */
}

.muteButton {
    height: 0%;
    position: absolute;
    bottom: 50px;
    right: 50px;
    height: 15px;
    width: auto;
    color: white;
    z-index: 10;
}

.muteButtonImage {
    height: 45px;
    width: auto;
}

.timeBar {
    width: 100%;
    background: black;
    border-style: solid;
    border-color: orangered;
    border-top-width: 5px;
    border-bottom-width: 5px;
    border-bottom-width: 2px;
    border-top-width: 2px;
    min-height: 48px;
    margin-bottom: 15px;
    overflow: visible;
}

#extendingTimeBar{
    width: 100%;
    height: 40px;
    margin-top: 4px;
    margin-bottom: 4px;
    background: white;

}

#extendingTimeBar div{
    height: 100%;
    text-align: right;
    padding: 0 3%; /*set to 0 to make flush*/
    line-height: 22px; /* same as #progressBar height if we want text middle aligned */
    width: 0;
    background-color: white;
    color: black;
    font-family: 'Sigmar One', cursive;
    box-sizing: border-box;
    line-height: 34px;
    font-size: 44px;
}

#titleCardPng {
    margin:0 auto;
    width: 90%;
    height: auto;
    position: relative;
    margin-top: 15%;
    -webkit-animation: wipe 1s linear forwards;		
    -webkit-mask-size: 2000px 1000px;
    -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,1) 45%,rgba(255,255,255,0) 48%,rgba(255,255,255,0) 100%);

}

@-webkit-keyframes rotating /* Safari and Chrome */ {
    from {
      -webkit-transform: rotate(0deg);
      -o-transform: rotate(0deg);
      transform: rotate(0deg);
    }
    to {
      -webkit-transform: rotate(360deg);
      -o-transform: rotate(360deg);
      transform: rotate(360deg);
    }
  }
/* ... */

